# volunteer_cloud

./: README.md  security.md
control_server/: requirements.txt  server.py
control_server/keys/: admin_private_key.pem  admin_public_key.pem
control_server/storage/: session_logs.csv  worker_info.csv  worker_logs.csv
control_server/templates/: analysis.html  index.html  worker.html
control_server_rust/: Cargo.toml
control_server_rust/src/: main.rs
control_server_rust/storage/: session_logs.csv  worker_info.csv  worker_logs.csv
control_server_rust/templates/: analysis.html  index.html  worker.html
plugins/hash_workload/: manifest.json
plugins/matrix_multiplication/: manifest.json  manifest.sig  plugin.py
plugins/monte_carlo_pi/: manifest.json  manifest.sig  plugin.py
plugins/prime_number/: manifest.json  manifest.sig  plugin.py
plugins/sort_arrays/: manifest.json  plugin.py
worker/: .gitignore  requirements.txt  worker.py
worker/job_runs/38bc0271/: output.json
worker/job_runs/67e93288/: output.json
worker/job_runs/d3af43b5/: output.json
worker/job_runs/e68e702d/: output.json
worker/plugin_cache/hash_workload/: manifest.json  manifest.sig  plugin.py
worker/plugin_cache/prime_number/: manifest.json
worker/plugin_cache/sort_arrays/: manifest.json  manifest.sig
