[package]
name = "control_server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
actix-files = "0.6"
tera = "1.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.8", features = ["v4"] }
csv = "1.3"
tokio = { version = "1.37", features = ["rt-multi-thread", "macros", "time"] }
colored = "2.2.0"
chrono = "0.4"
rand = "0.8.5"